# StandfordOnline-sefStudy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  clear_cell_nbs.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
config/: project.toml
cs224n/: .gitignore  Makefile  pyproject.toml
cs224n/week1/: README.md
cs224n/week1/Codes/: lec_note.ipynb
cs224n/week1/Notes/: lec_note.ipynb
cs224n/week1/hw1/: README.md  env.yml  exploring_word_vectors.ipynb
