[tool.poetry]
name = "standfordonline-selfstudy"
version = "0.1.0"
description = ""
authors = ["bekiekb1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.8"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
nbformat = "^5.10.4"
autopep8 = "^2.1.0"
ipykernel = "^6.29.4"
flake8-pyproject = "^1.2.3"
pyupgrade = "^3.15.2"

[tool.poetry.group.cs224n.dependencies]
nltk = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"





# Black formatting
[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | .venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

[tool.flake8]
exclude = [
    ".venv/*"
]
ignore = ["E501", "W503", "E226"]
# E501: Line too long
# W503: Line break occurred before binary operator
# E226: Missing white space around arithmetic operator

[tool.pyupgrade]
py39plus = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

# Pytest cov
[tool.coverage.run]
omit=[""]
